# inmet-bdmep-data

./: .gitignore  LICENSE  Pipfile  README.md  fetch-raw.py  fetch.py  inmet_bdmep.py  inmet_bdmep_fetcher.py  pyproject.toml  read-and-export.py  requirements.txt  run.py  setup.cfg
inmet_bdmep/: fetcher.py  reader.py
