[tool.poetry]
name = "inmet-bdmep-fetcher"
version = "0.0.3"
description = "Coletor de dados meteorológicos do INMET-BDMEP"
authors = ["Daniel Komesu <danielkomesu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.64.0"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
