[tool.poetry]
name = "inmet-bdmep-fetcher"
version = "0.2.0"
description = "Coletor de dados meteorológicos do INMET-BDMEP"
authors = ["Daniel Komesu <danielkomesu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "*"
httpx = "*"
pandas = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
