[project]
name = "inmet-bdmep-fetcher"
version = "0.2.0"
description = "Coletor de dados meteorológicos do INMET-BDMEP"
authors = [
    {name = "Daniel Komesu", email="danielkomesu@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
    "tqdm",
    "httpx",
    "pandas",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
