[metadata]
name = inmet_bdmep
version = 0.0.2
description = Script to download and read INMET BDMEP data.
long_description = file: README.md
keywords = inmet, bdmep, clima, meteorologia, data
maintainer = Daniel Komesu
author = Daniel Komesu
maintainer-email = contact@dkko.me
url = https://github.com/dankkom/inmet-bdmep
project_urls =
    Source=https://github.com/dankkom/inmet-bdmep
classifiers = License :: OSI Approved :: MIT License
              Programming Language :: Python :: 3
              Programming Language :: Python :: 3.6
              Programming Language :: Python :: 3.7
              Programming Language :: Python :: 3.8
              Programming Language :: Python :: 3.9
platforms = any
license_file = LICENSE

[options]
zip_safe = False
packages = find:
python_requires =  >=3.6
setup_requires =
  setuptools
install_requires =
  requests
  tqdm
  pandas
  pyarrow
