[metadata]
name = inmet_bdmep
version = 0.0.2
description = Scripts to download and read INMET BDMEP data.
long_description = file: README.md
keywords = inmet, bdmep, clima, meteorologia, data
maintainer = Daniel Komesu
author = Daniel Komesu
maintainer-email = contact@dkko.me
url = https://github.com/ophanim-raw-data/inmet-bdmep
project_urls =
    Source=https://github.com/ophanim-raw-data/inmet-bdmep
classifiers = License :: OSI Approved :: MIT License
              Programming Language :: Python :: 3
              Programming Language :: Python :: 3.10
platforms = any
license_file = LICENSE

[options]
zip_safe = False
packages = find:
python_requires =  >=3.10
setup_requires =
  setuptools
install_requires =
  requests
  tqdm
  pandas
  pyarrow
